...
                            <constraint firstItem="g2G-qH-68Y" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="h3T-Rq-rxx"/>
                            <constraint firstItem="fYy-0r-eIl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jD7-I3-Chz"/>
                            <constraint firstItem="fYy-0r-eIl" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xcW-u4-7a6"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Employee List" id="sPY-Kv-hFf">
                        <barButtonItem key="backBarButtonItem" title=" " id="41E-c4-zup"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Qt7-xf-EHg">
                            <connections>
                                <segue destination="wm4-ye-BUs" kind="show" id="vNg-iL-hTQ"/>
                            </connections>
                        </barButtonItem>
...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2qp-Ge-0OE">
                                <rect key="frame" x="15" y="79" width="345" height="250"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g8K-ln-goI">
                                        <rect key="frame" x="0.0" y="0.0" width="345" height="55"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJw-ym-8V0">
                                                <rect key="frame" x="30" y="10" width="285" height="35"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="namePhonePad" returnKeyType="next"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
...
                                            <constraint firstItem="eJw-ym-8V0" firstAttribute="top" secondItem="g8K-ln-goI" secondAttribute="top" constant="10" id="rEX-0q-3nW"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33W-KZ-e8F">
                                        <rect key="frame" x="0.0" y="65" width="345" height="55"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter age..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kFR-K0-Omj">
                                                <rect key="frame" x="30" y="10" width="285" height="35"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
...
                                            <constraint firstAttribute="trailing" secondItem="kFR-K0-Omj" secondAttribute="trailing" constant="30" id="zC4-WN-C5D"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUn-I3-cGn">
                                        <rect key="frame" x="0.0" y="130" width="345" height="55"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter salary..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rff-Mk-rrT">
                                                <rect key="frame" x="30" y="10" width="285" height="35"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
...
                                                <rect key="frame" x="97.5" y="5" width="150" height="45"/>
                                                <color key="backgroundColor" red="0.29408899649999998" green="1" blue="0.23737765860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="150" id="IvD-Al-oHB"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                                <state key="normal" title="Submit"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
